--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.9",
-    "@angular/cdk": "9.2.4",
-    "@angular/common": "^9.1.4",
-    "@angular/compiler": "9.1.9",
-    "@angular/core": "^9.1.4",
-    "@angular/forms": "^9.1.4",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.4",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.4",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
+    "@angular/animations": "^10.0.8",
+    "@angular/cdk": "10.1.2",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "scripts": {
